added Mockito for Announcement and Payment Service

--- a/java-backend/pom.xml
+++ b/java-backend/pom.xml
@@ -70,7 +70,7 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- in pom.xml -->
+		<!--AOP-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
@@ -93,10 +93,27 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--PDF-->
 		<dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itext</artifactId>
 			<version>2.1.7</version>
+		</dependency>
+
+		<!-- Required for JUnit 5 + Mockito -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.11.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Required for mocking static methods -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>5.11.0</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
