--- a/java-backend/.gitignore
+++ b/java-backend/.gitignore
@@ -17,6 +17,9 @@ target/
 ### ignoring application.properties
 /src/main/resources/application.properties
 
+#ignore logs
+logs
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
