--- a/dotnet-backend/dotnet-backend.csproj
+++ b/dotnet-backend/dotnet-backend.csproj
@@ -23,4 +23,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mappers\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
