--- a/dotnet-backend/dotnet-backend.csproj
+++ b/dotnet-backend/dotnet-backend.csproj
@@ -33,4 +33,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mappers\" />
+  </ItemGroup>
+
 </Project>
