--- a/dotnet-backend/dotnet-backend.csproj
+++ b/dotnet-backend/dotnet-backend.csproj
@@ -28,13 +28,19 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="PdfSharpCore" Version="1.3.67" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0" />
   </ItemGroup>
 
+
   <ItemGroup>
+
+    <Folder Include="Repositories\" />
+
     <Folder Include="Mappers\" />
+
   </ItemGroup>
 
 </Project>
