--- a/dotnet-backend/dotnet-backend.csproj
+++ b/dotnet-backend/dotnet-backend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -32,15 +32,6 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0" />
-  </ItemGroup>
-
-
-  <ItemGroup>
-
-    <Folder Include="Repositories\" />
-
-    <Folder Include="Mappers\" />
-
   </ItemGroup>
 
 </Project>
